[package]
name = "chat_server"
version = "0.0.1"
edition = "2021"

[dependencies]
actix = "0.13"
actix_derive = "0.6"
actix-web = "4"
actix-web-actors = "4.1"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
